github/ci/services/ci-search/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-search
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - ci-search.kubevirt.io
    secretName: ci-search-tls
  rules:
  - host: ci-search.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
